# oolu_workflow_gps

./: .dockerignore  .gitignore  CHANGELOG.md  Competitive edge V0.1 prompt.txt  Dockerfile  Project Prompt.txt  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.bat  setup.sh  workflow-gps_architectue.txt
src/: pyproject.toml
src/oolu/: __init__.py  assembly.py  author.py  buildledger.py  chat.py  cli.py  config.py  contextpack.py  currency.py  episodes.py  handoffs.py  legal.py  lessons.py  mail.py  memoryspine.py  naming.py  negative.py  predicates.py  reminders.py  retrieval.py  reviewer.py  routelearning.py  seats.py  settings_node.py  skillinduction.py  sms.py  social.py  temporalgraph.py  values.py
src/oolu/billing/: __init__.py  accounts.py  authorization.py  cards.py  charging.py  launch.py  model_calls.py  model_usage.py  payout.py  policy.py  pricing.py  service.py  settlement.py  subscription.py
src/oolu/cache/: __init__.py  signature.py
src/oolu/domains/: __init__.py
src/oolu/domains/cad/: __init__.py  executor.py  geometry.py
src/oolu/durable/: __init__.py  artifacts.py  artifacts_s3.py  audit.py  connection.py  files.py  hooks.py  maintenance.py  offers.py  outbox.py  postgres.py  queue.py  records.py  service.py
src/oolu/gateway/: __init__.py  app.py  asgi.py  http.py  notify.py  openapi.py  webhooks.py
src/oolu/gateway/frontend/: account.html  index.html
src/oolu/graph/: builder.py  nodes.py
src/oolu/identity/: __init__.py  accounts.py  apikeys.py  google_signin.py  jwks.py  policy.py  sessions.py  totp.py  totp_store.py
src/oolu/knowledge/: auth.py  client.py  remote.py  signature.py  traces.py
src/oolu/metering/: attribution.py  deriver.py  models.py  store.py
src/oolu/models/: __init__.py  errors.py  results.py  state.py
src/oolu/nodeplace/: __init__.py  accounts.py  desk.py  economics.py  errors.py  execution.py  handiwork.py  holds.py  hygiene.py  kyc.py  models.py  org_templates.py  plagiarism.py  pricing.py  provenance.py  reputation.py  rewards.py  sanitize.py  screening.py  service.py  store.py
src/oolu/orchestrator/: __init__.py  adapters.py  assembler.py  engine.py  intake.py  patchers.py  ports.py  proposals.py  ranker.py  rebuild.py  replay.py  scheduler.py  state.py
src/oolu/persistence/: migrations.py
src/oolu/planner/: __init__.py  baseline.py  config.py  sequences.py  torch_model.py  vocab.py
src/oolu/projectgraph/: __init__.py  kernel.py  models.py  planner.py  store.py
src/oolu/providers/: __init__.py  apikey.py  base.py  chatmodel.py  embeddings.py  errors.py  google.py  keyring.py  localmodel.py  profiles.py  registry.py  tokens.py  tools.py  transport.py  vault.py
src/oolu/replies/: __init__.py  models.py  runner.py
src/oolu/representative/: __init__.py  dataset.py  engine.py  gate.py  memory.py  models.py  persona.py  serving.py  store.py
src/oolu/representative/trainer/: __init__.py  dpo.py  jobs.py  run_dpo.py  run_sft.py  sft.py  worker.py
src/oolu/routing/: __init__.py  gateway.py  prompting.py
src/oolu/runtime/: __init__.py  backend.py  bundle.py  contract.py  isolation.py  polyglot.py  sandbox_shim.py  script_node.py  sweep.py  webhand.py
src/oolu/skills/: __init__.py  browser.py  browser_observer.py  cad_adapter.py  cli_adapter.py  commerce.py  commerce_intent.py  commerce_routes.py  compiler.py  creative.py  discovery.py  http_adapter.py  inputs.py  learner.py  models.py  pack.py  recorder.py  registry.py  requirements.py  runtime.py  server.py  site_driver.py  sop.py
src/oolu/skills/packs/: starter.yaml
src/oolu/telemetry/: investor.py  logging.py
src/oolu/worker/: __init__.py  control_plane.py  errors.py  ledger.py  policy.py
src/workflow_gps/: __init__.py  assembly.py  cli.py  config.py
src/workflow_gps/billing/: __init__.py  accounts.py  charging.py  disputes.py  fraud.py  guard.py  ledger.py  models.py  payout.py  policy.py  pricing.py  service.py  settlement.py
src/workflow_gps/cache/: __init__.py  models.py  signature.py  store.py
src/workflow_gps/desktop/: __init__.py  loopback.py  pending.py  service.py  ui.py  views.py  web.py
src/workflow_gps/domains/cad/: __init__.py  geometry.py  pack.py  (+2 more)
src/workflow_gps/durable/: __init__.py  artifacts.py  audit.py  connection.py  idempotency.py  postgres.py
src/workflow_gps/gateway/: __init__.py  app.py  asgi.py  errors.py  openapi.py  webhooks.py
src/workflow_gps/graph/: __init__.py  builder.py  edges.py  nodes.py
src/workflow_gps/identity/: __init__.py  errors.py  jwks.py  models.py  service.py  store.py  tokens.py
src/workflow_gps/knowledge/: __init__.py  auth.py  client.py  corpus.py  remote.py  replay.py  scrubbing.py  traces.py
src/workflow_gps/metering/: __init__.py  attribution.py  deriver.py  models.py  store.py
src/workflow_gps/models/: __init__.py  errors.py  knowledge.py  results.py  state.py
src/workflow_gps/nodeplace/: __init__.py  assembly.py  budget.py  economics.py  errors.py  execution.py  holds.py  market.py  models.py  quotes.py  ratings.py  rewards.py  safety.py  service.py  store.py
src/workflow_gps/orchestrator/: __init__.py  adapters.py  adaptive.py  assembler.py  contract.py  engine.py  intake.py  patchers.py  planner.py  proposals.py  scheduler.py  state.py  store.py
src/workflow_gps/persistence/: __init__.py  migrations.py
src/workflow_gps/providers/: __init__.py  apikey.py  transport.py
src/workflow_gps/replies/: engine.py  learned.py  offsets.py
src/workflow_gps/routing/: gateway.py  matrix.py  prompting.py
src/workflow_gps/runtime/: __init__.py  backend.py  contract.py  dependency.py  isolation.py  sandbox_shim.py  script_node.py
src/workflow_gps/skills/: __init__.py  browser.py  cli_adapter.py  compiler.py  context.py  contract.py  learner.py  pack.py  ports.py  registry.py  remote.py  requirements.py  server.py  store.py  workspace.py
src/workflow_gps/telemetry/: __init__.py  logging.py
src/workflow_gps/worker/: __init__.py  control_plane.py  errors.py  execution.py  http.py  leases.py  local_agent.py  policy.py  worker.py
(+450 files in other folders)
