[project]
name = "workflow-gps"
version = "0.2.0"
description = "A real-time navigation engine for local LLM agentic workflows."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "rich>=13.7",
    "truststore>=0.10.4",
]

# Layer dependencies (LangGraph, LiteLLM, docker SDK) live behind extras so the
# base install stays honest about what is actually wired up.
[project.optional-dependencies]
engine = ["langgraph>=0.2", "litellm>=1.40"]
docker = ["docker>=7.0"]
dev = ["pytest>=8.0", "mypy>=1.8", "ruff>=0.3"]

[project.scripts]
wfgps = "workflow_gps.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_gps"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["docker"]

[tool.ruff.lint]
# Correctness lints (pyflakes/pycodestyle) plus import sorting. Line-length style
# is owned by `ruff format`, so E501 is intentionally not enforced here.
select = ["E4", "E7", "E9", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "slow: tests that run real subprocess installs or the compiled graph",
    "needs_uv: requires the uv binary on PATH",
    "needs_langgraph: requires langgraph installed",
    "needs_docker: requires a reachable Docker daemon",
]
