[project]
name = "oolu"
version = "0.7.0"
description = "OoLu — a real-time navigation engine for local LLM agentic workflows."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "rich>=13.7",
    "truststore>=0.10.4",
]

# Layer dependencies (LangGraph, LiteLLM, docker SDK) live behind extras so the
# base install stays honest about what is actually wired up.
[project.optional-dependencies]
engine = ["langgraph>=0.2", "litellm>=1.40"]
docker = ["docker>=7.0"]
# P0 (v0.3.0) production-substrate adapters. Each fills a "Not implemented"
# seam from docs/ADAPTER_MATURITY.md and stays behind an extra so the base
# install keeps claiming only what is actually wired up.
postgres = ["psycopg[binary]>=3.1"]   # PostgreSQL durable adapter (workstream A)
oidc = ["cryptography>=41.0"]          # JWKS RS256/ES256 verifier (workstream B)
http = ["httpx>=0.27"]                 # real HttpTransport for providers (workstream C)
# The desktop/host shell: the ASGI server plus the real HTTP transport so a
# pasted model key can actually reach its provider from a setup.bat install.
serve = ["uvicorn>=0.30", "httpx>=0.27"]
browser = ["playwright>=1.40"]         # Playwright browser ActionExecutor (web skills)
# P2 (v0.5.0) money movement: the Stripe Connect PayoutAdapter reuses the injected
# HttpTransport (the `http` extra) instead of the Stripe SDK, so it is mockable in
# tests and never touches raw card data. No separate payments dependency is needed.
dev = ["pytest>=8.0", "mypy>=1.8", "ruff>=0.3"]

[project.scripts]
oolu = "oolu.cli:main"
# `wfgps` stays as a backwards-compatible alias for the old command name so
# existing scripts, docs, and muscle memory keep working after the rebrand.
wfgps = "oolu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oolu"]
artifacts = ["src/oolu/skills/packs/*.yaml"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["docker"]

[tool.ruff.lint]
# Correctness lints (pyflakes/pycodestyle) plus import sorting. Line-length style
# is owned by `ruff format`, so E501 is intentionally not enforced here.
select = ["E4", "E7", "E9", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
    "slow: tests that run real subprocess installs or the compiled graph",
    "needs_uv: requires the uv binary on PATH",
    "needs_langgraph: requires langgraph installed",
    "needs_docker: requires a reachable Docker daemon",
    "needs_postgres: requires a reachable PostgreSQL instance (workstream A)",
    "needs_network: requires live outbound network access (workstream C)",
]
